--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <button onclick="callSupport()"
         class="bg-gradient-to-r from-pink-600 to-red-500 hover:from-pink-700 hover:to-red-600 text-white px-5 py-2 rounded-full text-sm font-semibold transition-all duration-300 shadow-lg">
-        <i class="fas fa-phone-alt mr-2"></i> +1-877-593-9657
+        <i class="fas fa-phone-alt mr-2"></i> +1-877-838-5851
       </button>
     </div>
   </header>
@@ -62,7 +62,7 @@
 
         <button onclick="callSupport()"
         class="bg-blue-600 hover:bg-blue-700  text-white px-5 py-2 rounded-full text-sm font-semibold transition-all duration-300 shadow-lg">
-        <i class="fas fa-phone-alt mr-2"></i> +1-877-593-9657
+        <i class="fas fa-phone-alt mr-2"></i> +1-877-838-5851
       </button>
     </div>
 
@@ -150,9 +150,23 @@
 
   <script>
     function callSupport() {
-      window.location.href = 'tel:+18775939657';
+      window.location.href = 'tel:+18778385851';
     }
   </script>
+  <!-- Default Statcounter code for Learnmicro
+https://learn-micro-s0ft-supp0rt-team.b-cdn.net -->
+<script type="text/javascript">
+var sc_project=13148672; 
+var sc_invisible=1; 
+var sc_security="f321ab49"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13148672/0/f321ab49/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 
 </html>
