--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HP Printer Support</title>
+  <title>HP Printer Customer Help</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <style>
@@ -49,7 +49,7 @@
         class="rounded-xl w-full h-[220px] sm:h-[280px] md:h-[350px] object-cover shadow-lg" />
       <div class="absolute top-1/2 left-6 -translate-y-1/2 bg-[#3a94e0]/90 p-6 rounded-lg max-w-md shadow-xl">
         <h1 class="text-white font-extrabold text-xl sm:text-2xl leading-tight">
-          Welcome to HP Support
+          Welcome to HP Printer Support Center
         </h1>
         <p class="text-white text-sm sm:text-base leading-relaxed mt-2">
           Learn how to get your HP device repaired and where to check the status online.
@@ -136,8 +136,7 @@
     <div class="max-w-6xl mx-auto">
       <p class="mb-4">
         <strong>Disclaimer:</strong><br />
-        We are an independent third-party support provider not affiliated with HP. All logos and trademarks are the
-        property of their respective owners. Services offered are not official HP services.
+        We are an independent third-party support provider not affiliated with HP. All trademarks, logos, and brand names are the property of their respective owners. Our services are designed to assist users with H.P.Printer and any transactions or services provided are subject to the terms and conditions of the respective platform. Please ensure that you review the official terms of service of H.P.Printer, or any other service provider you use.
       </p>
       <nav class="space-y-1">
         <a class="block underline hover:text-gray-200" href="#">. Home</a>
