--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         class="rounded-xl w-full h-[220px] sm:h-[280px] md:h-[350px] object-cover shadow-lg" />
       <div class="absolute top-1/2 left-6 -translate-y-1/2 bg-[#3a94e0]/90 p-6 rounded-lg max-w-md shadow-xl">
         <h1 class="text-white font-extrabold text-xl sm:text-2xl leading-tight">
-          Welcome to HP Printer Support Center
+          HP Printer Support Center
         </h1>
         <p class="text-white text-sm sm:text-base leading-relaxed mt-2">
           Learn how to get your HP device repaired and where to check the status online.
@@ -69,7 +69,7 @@
     <!-- Glass Info Card -->
     <section class="mt-5 bg-white/5 backdrop-blur-md rounded-xl p-6 sm:p-10 shadow-xl border border-white/10">
       <h2 class="text-2xl sm:text-3xl font-extrabold text-center text-blue-300 mb-6">
-        24/7 Expert Support for Your HP Printer
+        24/7 Expert Support for Your Printer
       </h2>
 
       <div class="space-y-6 text-base text-slate-200">
