--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="https://storage.googleapis.com/a1aa/image/d5c27842-5f28-4f1b-0df9-1ad19c57b756.jpg" alt="HP Logo"
           class="h-12 w-12 sm:h-14 sm:w-14 rounded-full object-cover border-2 border-white shadow-md" />
         <div>
-          <h1 class="text-xl sm:text-2xl font-bold text-white tracking-wide leading-tight">HP Printer Help Desk</h1>
+          <h1 class="text-xl sm:text-2xl font-bold text-white tracking-wide leading-tight">H.P Printer Help Desk</h1>
        
         </div>
       </div>
@@ -49,7 +49,7 @@
         class="rounded-xl w-full h-[220px] sm:h-[280px] md:h-[350px] object-cover shadow-lg" />
       <div class="absolute top-1/2 left-6 -translate-y-1/2 bg-[#3a94e0]/90 p-6 rounded-lg max-w-md shadow-xl">
         <h1 class="text-white font-extrabold text-xl sm:text-2xl leading-tight">
-          HP Printer Support Center
+          H.P Printer Support Center
         </h1>
         <p class="text-white text-sm sm:text-base leading-relaxed mt-2">
           Learn how to get your HP device repaired and where to check the status online.
@@ -136,7 +136,7 @@
     <div class="max-w-6xl mx-auto">
       <p class="mb-4">
         <strong>Disclaimer:</strong><br />
-        We are an independent third-party support provider not affiliated with HP. All trademarks, logos, and brand names are the property of their respective owners. Our services are designed to assist users with H.P.Printer and any transactions or services provided are subject to the terms and conditions of the respective platform. Please ensure that you review the official terms of service of H.P.Printer, or any other service provider you use.
+        We are an independent third-party support provider not affiliated with Hp. All trademarks, logos, and brand names are the property of their respective owners. Our services are designed to assist users with H.P.Printer and any transactions or services provided are subject to the terms and conditions of the respective platform. Please ensure that you review the official terms of service of H.P.Printer, or any other service provider you use.
       </p>
       <nav class="space-y-1">
         <a class="block underline hover:text-gray-200" href="#">. Home</a>
